--- a/index.html
+++ b/index.html
@@ -4,16 +4,27 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-
-  <title>JS Bin</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <title>To Do</title>
 </head>
 <body>
-    <div id="title">
-        List:
-    </div>
+    <h1>My To Do List</h1>
     <div id="app">
-        {{ message }}
-    </div>
+        <h2>Todos:</h2>
+        <ol>
+            <li v-for="todo in todos">
+                <label>
+                    <input type="checkbox" v-on:change="toggle(todo)" v-bind:checked="todo.done">
+                    <del v-if="todo.done">
+                        {{ todo.text }}
+                    </del>
+                    <span v-else>
+                        {{ todo.text }}
+                    </span>
+                </label>
+            </li>
+        </ol>
+    </div>          
     <script src="main.js"></script>
 </body>
 </html>
