--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h1>My To Do List</h1>
     <div id="app">
         <h2>Todos:</h2>
+        <input type="text" v-model="inputValue" v-on:keyup.enter="add"/>
+        <button v-on:click="add">add</button>
         <ol>
             <li v-for="todo in todos">
                 <label>
